# webassembly-video-filters

./: .gitattributes  .gitignore  BUILD.gn  LICENSE.md  Makefile  README.md  add.c  add.cpp  add.wasm  ecs193help.txt  gn  halide-luma.cpp  halide.txt  processor.js  scope.cpp
angular-video-player/: .gitignore  .gitignore.txt  README.md  angular.json  package-lock.json  package.json
angular-video-player-demo/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  server.js  zmo.wasm
angular-video-player-demo/e2e/src/: app.e2e-spec.ts
angular-video-player-demo/src/: index.html  styles.scss
angular-video-player-demo/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
angular-video-player/server/: server.js
angular-video-player/src/: index.html  styles.scss
angular-video-player/src/app/: algorithms.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  pipes.ts
angular-video-player/src/assets/: zmo.wasm
chrome-extension/: contentScript.js  manifest.json  popup.html  popup.js  zmo.wasm
original_files/: add.cpp  processor.js
server/: package-lock.json  package.json  server-prod.js  server.js
server/prod/: backend.service  mime.types  nginx.conf
src/: assets  cpp_scope.cpp  cpp_scope_IGNORE.cpp  cpp_scope_helpers.cpp  cpp_scope_helpers.h  cpp_zmo.cpp  halide_zmo.cpp  scope.cpp  scope.h  types.cpp  types.h  zmo.cpp
src/benchmark/: Makefile  benchmark.cpp  benchmark.js  benchmark_data.json  benchmark_data.txt  graph.py  package-lock.json  package.json
src/benchmark/assets/: algorithms.js  algorithms.ts  zmo.wasm
src/generator/: scope.cpp
test/: BUILD.gn
web-app/: index.html  processor.js
webapp/: host.py  index.html  main.js  main.js.map  polyfills.js  processor.js  styles.css  styles.css.map
webapp/assets/: zmo.wasm
zmo/: .gitignore  .gn  BUILD.gn
zmo/src/: scope.cpp  scope.h  types.cpp  zmo.cpp
zmo/src/generator/: scope.cpp
zmo/webapp/: index.html
